Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/Region_Product_Line_Target_Leads__c.object-meta.xml
<CustomObject>
    <label>Region Product Line Target (Leads)</label>
    <nameField>
        <displayFormat>RegPLT-{0000}</displayFormat>
        <label>Region Product Line Target (Leads) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Region Product Line Targets (Leads)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>