Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/fields/Base_Target_Variance__c.field-meta.xml
<CustomField>
    <fullName>Base_Target_Variance__c</fullName>
    <formula>Leads_Created__c  -  Base_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Target Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>