Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/fields/Leads_Created__c.field-meta.xml
<CustomField>
    <fullName>Leads_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Leads Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>