Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/fields/Leads_Created_Stretch__c.field-meta.xml
<CustomField>
    <fullName>Leads_Created_Stretch__c</fullName>
    <formula>Leads_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leads Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>