Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/fields/Number_Related_Leads__c.field-meta.xml
<CustomField>
    <fullName>Number_Related_Leads__c</fullName>
    <label>Number Related Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>