Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/fields/Stretch_Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Stretch_Target_Achieved__c</fullName>
    <formula>IF ( Leads_Created_Stretch__c  = 0, 0, (  Leads_Created_Stretch__c  /  Stretch_Target__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stretch Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>