Perkin-UAT/force-app/main/default/objects/Region_Product_Line_Target_Leads__c/listViews/UAT_Region_Product_Line_Targets_Leads.listView-meta.xml
<ListView>
    <fullName>UAT_Region_Product_Line_Targets_Leads</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Year__c</columns>
    <columns>Month__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>11/5/2015 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Gary Smith Partnership</value>
    </filters>
    <label>UAT Region Product Line Targets (Leads)</label>
    <language>en_US</language>
</ListView>